--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -19,7 +19,7 @@ form {
 }
 
 input[type=text] {
-  width: 100%;
+  width: calc(100% + 50px);
   height: 40px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -31,15 +31,17 @@ input[type=text] {
 input {
   width: fit-content;
 }
-f
+
 button.login {
-  width: 100%;
+  width: calc(100% + 50px);
   height: 40px;
   background-color: #4CAF50;
   color: white;
-  padding: 14px 20px;
+  padding: 14px 15px;
   margin: 8px 0;
   border: none;
+  display: flex;
+  justify-content: center;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -52,4 +54,10 @@ button.login {
   height: calc(100vh * 0.75);
   width: 100%;
   border-bottom-left-radius: 10px;
+}
+
+.input-group {
+  width: calc(100% + 50px);
+  display: flex;
+  gap: 10px;
 }
