--- a/src/assets/styles/mhs-page.css
+++ b/src/assets/styles/mhs-page.css
@@ -1,3 +1,17 @@
 .mhs-page {
-  background-color: #e6e6e6;
+  background-color: #f3f2f2;
+  height: 100vh;
+}
+
+header {
+  padding: 10px 5%;
+  background-color: #FFFFFF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+header h1, h2, h3, p {
+  margin: 0;
 }
