prevent using website before login v2

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.web-blocker {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
