--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -37,13 +37,13 @@
   }
 }
 
-.web-blocker {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
+.button-login {
+  border: none;
+  border-radius: 5px;
+  background-color: #919191;
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 20px;
 }
