--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -36,6 +36,27 @@
   text-decoration: none;
 }
 
+.web-blocker {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(235, 235, 235);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.login {
+  padding: 20px;
+  height: auto;
+  background-color: white;
+  display: flex;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  flex-direction: row;
+  gap: 10px;
+}
+
 form {
   display: flex;
   flex-direction: column;
